<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Autotracks</string>

    <!-- Menus -->

    <string name="action_refresh">Refrescar</string>
    <string name="action_share">Compartir</string>
    <string name="action_about">Información</string>
    <string name="action_settings">Configuración</string>
    <string name="action_rutas">Rutas</string>

    <!-- Texto para compartir en redes sociales -->

    <string name="share_intent_text">
        Descarga Autotracks! Colabora para monitorear el estado
        del tráfico en Asunción y Gran Asunción.
        https://play.google.com/store/apps/details?id=py.com.fpuna.autotracks
    </string>

    <string name="share_intent_title">Comparte Autotracks!</string>

    <!-- Información -->

    <string name="title_activity_about">Información</string>

    <!-- Sobre como funciona la app -->

    <string name="title_section_autotracks">Autotracks</string>
    <string name="info_que_es">¿QUÉ ES?</string>
    <string name="info_que_es_descripcion">
        Autotracks es una aplicación colaborativa que te permite
        conocer en tiempo real el estado del tráfico en las calles
        de Asunción y Gran Asunción.
    </string>

    <string name="info_como_funciona">¿CÓMO FUNCIONA?</string>
    <string name="info_como_funciona_descripcion">
        La aplicación colecta datos de manera anónima sobre la
        ubicación y velocidad del dispositivo utilizando
        cualquier sensor que tenga a su disposición GPS, WiFi,
        GSM y envía esta información a un servidor que se encarga de
        procesarla para determinar el estado de las calles.
    </string>

    <string name="info_leyendas">LEYENDAS</string>
    <string name="info_leyendas_descripcion">
        Se pueden distinguir tres estados que muestran la
        velocidad promedio de la ruta de acuerdo al color:
    </string>
    <string name="info_leyendas_descripcion_verde">
        Verde: 30 o más kilómetros por hora.
    </string>
    <string name="info_leyendas_descripcion_amarillo">
        Amarillo: entre 20 y 29 kilómetros por hora.
    </string>
    <string name="info_leyendas_descripcion_naranja">
        Naranja: entre 10 y 19 kilómetros por hora.
    </string>
    <string name="info_leyendas_descripcion_rojo">
        Rojo: entre 0 y 9 kilómetros por hora.
    </string>

    <!-- Sobre el proyecto y los autores -->

    <string name="title_section_autores">Autores</string>
    <string name="autores_proyecto">PROYECTO</string>
    <string name="autores_proyecto_descripcion">
        Autotracks es una aplicación desarrollada como parte
        del trabajo de grado de la carrera de Ingeniería Informática
        de la Facutltad Politécnica de la Universidad Nacional de Asunción.
        Es completamente open source y fue desarrollada en su totalidad utilizando
        herramientas libres y gratuitas.
        \n\nEl principal objetivo de este proyecto es construir un sistema que permita
        recolectar y procesar información del estado del tránsito en tiempo real
        para ofrecer funcionalidades que ayuden al control y/o reducción de la
        congestión de tránsito.
    </string>

    <string name="autores_desarrolladores">DESARROLLADORES</string>
    <string name="autores_desarrolladores_acampuzano">Alfredo Campuzano</string>
    <string name="autores_desarrolladores_rlopez">Rubén López</string>

    <string name="autores_tutor">TUTOR</string>
    <string name="autores_tutor_jlima">Ing. Joaquín Lima</string>

    <!-- Configuraciones -->

    <string name="title_activity_settings">Configuración</string>

    <!-- Intervalo de tiempo para el reconocimiento de actividad -->

    <string name="pref_title_activity_recognition_interval">Intervalo de Reconocimiento de Actividad</string>
    <string-array name="pref_activity_recognition_interval_list_titles">
        <item>15 segundos</item>
        <item>30 segundos</item>
        <item>45 segundos</item>
        <item>60 segundos</item>
    </string-array>
    <string-array name="pref_activity_recognition_interval_list_values">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>

    <!-- Tiempo de tolerancia antes de finalizar el rastreo -->

    <string name="pref_title_activity_recognition_tolerance">Tolerancia de Reconocimiento de Actividad</string>
    <string-array name="pref_activity_recognition_tolerance_list_titles">
        <item>5 minutos</item>
        <item>10 minutos</item>
        <item>15 minutos</item>
    </string-array>
    <string-array name="pref_activity_recognition_tolerance_list_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>

    <!-- Intervalo para la toma de localizaciones -->

    <string name="pref_title_location_updates_interval">Intervalo de Toma de Localizaciones</string>
    <string-array name="pref_location_updates_interval_list_titles">
        <item>30 segundos</item>
        <item>1 minuto</item>
        <item>2 minutos</item>
    </string-array>
    <string-array name="pref_location_updates_interval_list_values">
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>

</resources>
