<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="py.com.fpuna.autotracks.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            style="@style/InfoTextView"
            android:text="@string/autores_proyecto" />

        <TextView
            style="@style/InfoDescTextView"
            android:text="@string/autores_proyecto_descripcion"/>

        <TextView
            style="@style/InfoTextView"
            android:text="@string/autores_desarrolladores" />

        <TextView
            style="@style/InfoAutoresTextView"
            android:text="@string/autores_desarrolladores_acampuzano"/>

        <TextView
            style="@style/InfoAutoresTextView"
            android:text="@string/autores_desarrolladores_rlopez" />

        <TextView
            style="@style/InfoTextView"
            android:text="@string/autores_tutor" />

        <TextView
            style="@style/InfoAutoresTextView"
            android:text="@string/autores_tutor_jlima" />

    </LinearLayout>
</ScrollView>