<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="activity_recognition_interval"
        android:title="@string/pref_title_activity_recognition_interval"
        android:defaultValue="30"
        android:entries="@array/pref_activity_recognition_interval_list_titles"
        android:entryValues="@array/pref_activity_recognition_interval_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="activity_recognition_tolerance"
        android:title="@string/pref_title_activity_recognition_tolerance"
        android:defaultValue="10"
        android:entries="@array/pref_activity_recognition_tolerance_list_titles"
        android:entryValues="@array/pref_activity_recognition_tolerance_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="location_updates_interval"
        android:title="@string/pref_title_location_updates_interval"
        android:defaultValue="60"
        android:entries="@array/pref_location_updates_interval_list_titles"
        android:entryValues="@array/pref_location_updates_interval_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
